apply plugin: 'java'
apply plugin: 'eclipse'
apply from: 'javafx.plugin'

eclipse {
    project {
        natures 'org.eclipse.jdt.core.javanature', 'org.eclipse.xtext.ui.shared.xtextNature'
        buildCommand 'org.eclipse.jdt.core.javabuilder'
        buildCommand 'org.eclipse.xtext.ui.shared.xtextBuilder'
    }

    classpath {
        containers 'at.bestsolution.efxclipse.tooling.jdt.core.JAVAFX_CONTAINER'
    }
}

repositories {
	mavenCentral()
	flatDir {
		dirs 'libs'
	}
}

dependencies {
	compile name: 'openjfx-dialogs-1.0.2'
	testCompile name: 'mockito-all-1.10.19'
  	testCompile group: 'junit', name: 'junit', version: '4.11'

}

sourceCompatibility = 1.8

sourceSets {
  main {
    resources {
        srcDirs = ["src/main/java"]
        includes = ["**/*.fxml","**/*.css"]
    }
  }
}

javafx {
    javaRuntime = '<NO RUNTIME>'
    
    appID 'MIEditor'
    appName 'MIFImageEditor'
    mainClass 'com.github.gilz688.mifeditor.MIEApplication'

    jvmArgs = ['-XX:+AggressiveOpts', '-XX:CompileThreshold=1']
    systemProperties = ['prism.disableRegionCaching':'true']
    arguments = ['-l', '--fast']
}